<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:stretchColumns="0"
	android:background="@drawable/background" android:layout_gravity="center_vertical|center_horizontal"
	android:layout_height="wrap_content" android:layout_width="wrap_content">

<TextView android:textColor="#ffffff" android:text="@string/text1"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" />
	
	<TableLayout>
	<TableRow>
		<TextView android:textColor="#ffffff" android:text="@string/text2"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
		
		 <ImageView  
        android:layout_width="50px" 
        android:layout_height="50px" 
    android:layout_gravity="right|top"
       android:src="@drawable/circleface_button" />
	</TableRow>

	<TableRow >
		<TextView android:textColor="#ffffff" android:text="@string/text3"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
			<SeekBar android:id="@+id/seek_bar0" android:padding="4dip" 
           android:layout_span="1"/>
		
	</TableRow>
<TextView
android:id="@+id/widget34"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

></TextView>
	<TableRow >
		<TextView android:textColor="#ffffff" android:text="@string/text4"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
	</TableRow>
<TextView
android:id="@+id/widget34"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

></TextView>
<TableRow >
		<TextView android:textColor="#ffffff" android:text="@string/text5"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
	</TableRow>
<TextView
android:id="@+id/widget34"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

></TextView>
<TableRow >
		<TextView android:textColor="#ffffff" android:text="@string/text6"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
	</TableRow>
	<TextView
android:id="@+id/widget34"
android:layout_width="wrap_content"
android:layout_height="wrap_content"

></TextView>
<TableRow >
		<TextView android:textColor="#ffffff" android:text="@string/text7"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_width="200px"
			android:layout_gravity="center_vertical" />
	</TableRow>	
	<TableRow android:layout_marginTop="20px">
		<Button android:id="@+id/buttonOK" android:text="ok"
		android:layout_marginLeft="50px"
			android:layout_height="wrap_content" android:layout_width="200dip"
			
			 />
	</TableRow>
	</TableLayout>
</TableLayout>