<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:stretchColumns="0"
	android:background="@drawable/background" android:layout_gravity="center_vertical|center_horizontal"
	android:layout_height="wrap_content" android:layout_width="wrap_content">
<TableRow>
<TextView android:textColor="#ffffff" android:text="@string/text16"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="240dip" />
 </TableRow>
 <TextView android:textColor="#ffffff" 
			android:layout_height="4dip" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="240dip" />
 <TableRow>
 <TextView android:textColor="#ffffff" android:text="@string/text17"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="240dip" />
 </TableRow>
 <TextView android:textColor="#ffffff" 
				android:layout_height="4dip" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 
  <TableRow>
 <TextView android:textColor="#ffffff" android:text="@string/text18"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 </TableRow>
 
 <TextView android:textColor="#ffffff" 
		 android:layout_height="4dip" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
  <TableRow>
 <TextView android:textColor="#ffffff" android:text="@string/text19"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 </TableRow>
 
  <TextView android:textColor="#ffffff" 
				android:layout_height="4dip" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
  <TableRow>
 <TextView android:textColor="#ffffff" android:text="@string/text20"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 </TableRow>
 <TextView android:textColor="#ffffff" 
				android:layout_height="4dip" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 <TableRow>
 <TextView android:textColor="#ffffff" android:text="@string/text21"
			android:textSize="12px" android:layout_marginLeft="6dip"
			android:layout_gravity="center_vertical" android:layout_width="200dip" />
 </TableRow>
  <Button android:id="@+id/buttonOK" android:text="ok"
			android:layout_height="40dip" android:layout_width="100dip"
			android:layout_gravity="left"
			
			 />

</TableLayout>